--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
     },
     "homepage": "https://github.com/marcelarie/sass-instagram-clone#readme",
     "devDependencies": {
-        "node-sass": "^5.0.0"
+        "autoprefixer": "^10.2.5",
+        "cssnano": "^4.1.10",
+        "node-sass": "^5.0.0",
+        "postcss": "^8.2.7",
+        "postcss-cli": "^8.3.1"
     }
 }
