--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "scss": "node-sass -w source/sass -o public/css"
+        "sass": "sass --watch source/sass:public/css"
     },
     "repository": {
         "type": "git",
@@ -17,12 +17,5 @@
     "bugs": {
         "url": "https://github.com/marcelarie/sass-instagram-clone/issues"
     },
-    "homepage": "https://github.com/marcelarie/sass-instagram-clone#readme",
-    "devDependencies": {
-        "autoprefixer": "^10.2.5",
-        "cssnano": "^4.1.10",
-        "node-sass": "^5.0.0",
-        "postcss": "^8.2.7",
-        "postcss-cli": "^8.3.1"
-    }
+    "homepage": "https://github.com/marcelarie/sass-instagram-clone#readme"
 }
